# MCMCpack

./: DESCRIPTION  HISTORY  INDEX  LICENSE  MD5  NAMESPACE  README  cleanup  confdefs.h  config.status  configure  configure.ac
R/: BayesFactors.R  HDPHMMnegbin.R  HDPHMMpoisson.R  HDPHSMMnegbin.R  HMMpanelFE.R  HMMpanelRE.R  MCMCSVDreg.R  MCMCbaselineEI.R  MCMCbinaryChange.R  MCMCdynamicEI.R  MCMCdynamicIRT1d-b.R  MCMCdynamicIRT1d.R  MCMCfactanal.R  MCMChierEI.R  MCMChlogit.R  MCMChpoisson.R  MCMChregress.R  MCMCintervention.R  MCMCirt1d.R  MCMCirtHier1d.R  MCMCirtKd.R  MCMCirtKdRob.R  MCMClogit.R  MCMCmetrop1R.R  MCMCmixfactanal.R  MCMCmnl.R  MCMCnegbin.R  MCMCnegbinChange.R  MCMCoprobit.R  MCMCoprobitChange.R  MCMCordfactanal.R  MCMCpack-package.R  MCMCpaircompare.R  MCMCpaircompare2d.R  MCMCpaircompare2dDP.R  MCMCpanel.R  MCMCpoisson.R  MCMCpoissonChange.R  MCMCpoissonChangepoint.R  MCMCprobit.R  (+27 more)
confmkM8Qq/: subs-1.sed
data/: 00Index  Euro2016.rda  Nethvote.rda  PErisk.rda  Rehnquist.rda  Senate.rda  SupremeCourt.rda
inst/: CITATION  HISTORY.txt
man/: BayesFactor.Rd  Dirichlet.Rd  Euro2016.Rd  HDPHMMnegbin.Rd  HDPHMMpoisson.Rd  HDPHSMMnegbin.Rd  HMMpanelFE.Rd  HMMpanelRE.Rd  InvGamma.Rd  InvWishart.Rd  MCMCSVDreg.Rd  MCMCbaselineEI.Rd  MCMCbinaryChange.Rd  MCMCdynamicEI.Rd  MCMCdynamicIRT1d.Rd  MCMCfactanal.Rd  MCMChierEI.Rd  MCMChlogit.Rd  MCMChpoisson.Rd  MCMChregress.Rd  MCMCintervention.Rd  MCMCirt1d.Rd  MCMCirtHier1d.Rd  MCMCirtKd.Rd  MCMCirtKdHet.Rd  MCMCirtKdRob.Rd  MCMClogit.Rd  MCMCmetrop1R.Rd  MCMCmixfactanal.Rd  MCMCmnl.Rd  MCMCnegbin.Rd  MCMCpanel.Rd  (+78 more)
(+140 files in other folders)
